Fix typo of oatmeal recipe html
Changed a typo in maple and brown sugar oatmeal recipe from creamy cavatappi to maple and brown sugar oatmeal

--- a/recipes/maple-brown-sugar-oatmeal.html
+++ b/recipes/maple-brown-sugar-oatmeal.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Maple and Brown Sugar Recipe</title>
+    <title>Maple and Brown Sugar Oatmeal Recipe</title>
 </head>
 <body>
 
-    <h1>Creamy Cavatappi</h1>
+    <h1>Maple and Brown Sugar Oatmeal</h1>
     <img src="https://live.staticflickr.com/3468/3294687099_f49fba48e7_b.jpg"
         alt="Picture of honey oatmeal" width="330">
 
